--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,16 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Docker Compose Coverage
         run: docker-compose -f ./docker-compose-testapi.yml up coverage
+         
+      # Publish Unit Test Results
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1.3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          check_name: Unit Test Results
+          comment_title: Unit Test Statistics
+          hide_comments: all but latest
+          files: test-results/**/*.xml
+          report_individual_runs: true
+          deduplicate_classes_by_file_name: false
