--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,14 +31,10 @@ jobs:
         run: docker-compose -f ./docker-compose-testapi.yml up coverage
          
       # Publish Unit Test Results
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1.3
-        if: always()
+      - uses: testspace-com/setup-testspace@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          check_name: Unit Test Results
-          comment_title: Unit Test Statistics
-          hide_comments: all but latest
-          files: test-results/**/*.xml
-          report_individual_runs: true
-          deduplicate_classes_by_file_name: false
+          domain: ${{ github.repository_owner }}
+      - name: Push result to Testspace server
+        run: |
+          results/*.*
+        if: always()
