--- a/pipelines/azure-pipelines-e2e-coverage.yml
+++ b/pipelines/azure-pipelines-e2e-coverage.yml
@@ -8,11 +8,11 @@ variables:
   disable.coverage.autogenerate: 'true'
 
 steps:
-- bash: 'docker-compose -f ./docker-compose-testapi.yml up unit integration e2e'
-  displayName: 'Docker Compose Test'
+- bash: 'docker-compose -f ./docker-compose-testapi.yml up e2e'
+  displayName: 'Docker Compose - E2e Test only'
 
 - bash: 'docker-compose -f ./docker-compose-testapi.yml up coverage'
-  displayName: 'Docker Compose Coverage'
+  displayName: 'Docker Compose - E2e Client Coverage'
 
 - task: PublishTestResults@2
   displayName: 'Publish Test Results **/*.trx'
